# EventFlow

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 426a0871894b_feat_add_events_table.py  bf4fd54842fd_init_create_users_table.py  fa7af81ed3ed_add_rsvp_system_and_slots.py
app/: main.py
app/api/: deps.py
app/api/routers/: auth.py  events.py  users.py
app/core/: config.py  database.py  security.py
app/crud/: event.py  user.py
app/models/: __init__.py  event.py  user.py
app/schemas/: __init__.py  event.py  filters.py  user.py
app/services/: event_service.py
tests/: conftest.py  test_auth.py  test_events.py  test_filters.py  test_users.py
